# BuckshotRoulette

./: CMakeLists.txt  README.md  buckshotroulette.pro  main.cpp  resources.qrc
qml/: Game.qml  JoinServerScreen.qml  Menu.qml  NetworkMenu.qml  ServerScreen.qml  Shotgun.qml  main.qml
src/: GameLogic.cpp  GameLogic.h  networklogic.cpp  networklogic.h
